--- a/src/presentation/styles/index.css
+++ b/src/presentation/styles/index.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #aa213e;
+  --color-primary: #ee9e2e;
+  --color-secundary: #25262a;
+  --color-terciary: #101213;
+  --color-base: #fafafa;
   --breakpoint-xs: 30rem;
 }
