Primera version closed

--- a/src/presentation/styles/index.css
+++ b/src/presentation/styles/index.css
@@ -2,6 +2,7 @@
 
 @theme {
   --color-primary: #ee9e2e;
+  --color-primary-opacity: #edb76b;
   --color-secundary: #25262a;
   --color-terciary: #101213;
   --color-base: #fafafa;
