Nuevo modulo para Stabilar

--- a/src/presentation/styles/index.css
+++ b/src/presentation/styles/index.css
@@ -5,6 +5,7 @@
   --color-primary-opacity: #edb76b;
   --color-secundary: #25262a;
   --color-terciary: #101213;
+  --color-stabilar: #ca2151;
   --color-base: #fafafa;
   --breakpoint-xs: 30rem;
 }
